--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "flatpickr": "^4.6.13",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
