--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
