--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "swiper": "^11.1.15"
   },
